style: fix card detail view on mobile

--- a/src/styles/RepoCard/RepoCard.scss
+++ b/src/styles/RepoCard/RepoCard.scss
@@ -61,8 +61,8 @@
 
   .card_details {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 4rem;
     padding-top: 0.5rem;
     color: white;
 
@@ -73,6 +73,7 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      margin: 0 2rem 0 0;
     }
 
     .card_details_stars,
